MVP desarrollado y documentación añadida
